--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,13 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    maven {
+        url "https://pkgs.dev.azure.com/kambr/_packaging/mvn/maven/v1"
+        credentials {
+            username "$mavenUser"
+            password "$mavenPassword"
+        }
+    }
 }
 
 dependencies {
@@ -57,7 +64,7 @@ dependencies {
     implementation "org.antlr:antlr4:4.8-1"
     implementation "org.antlr:antlr4-runtime:4.8-1"
     implementation 'com.google.guava:guava:28.1-jre'
-    implementation 'org.apache.logging.log4j:log4j-core:2.14.0'
+    implementation 'com.kambr:kambr-logger:0.7.3'
 
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
@@ -70,14 +77,10 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'com.Main'
+    mainClassName = 'com.kambr.sync.Main'
 }
 
 test {
     // Use junit platform for unit tests
     useJUnitPlatform()
-}
-
-clean {
-    delete "generated-src"
 }
