--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,13 @@
 plugins {
     id 'java'
     id 'application' // Apply the application plugin to add support for building a CLI application.
-    id 'com.palantir.git-version' version '0.11.0'
     id 'net.linguica.maven-settings' version '0.5'
     id 'maven-publish'
     id 'antlr'
 }
 
 configurations {
-    version gitVersion()
+    version 'git tag'.execute().text
     group 'com.kambr'
 }
 
