--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,13 @@ plugins {
     id 'java'
     id 'application' // Apply the application plugin to add support for building a CLI application.
     id 'net.linguica.maven-settings' version '0.5'
+    id 'com.palantir.git-version' version '0.11.0'
     id 'maven-publish'
     id 'antlr'
 }
 
 configurations {
-    version 'git tag'.execute().text
+    version versionDetails().lastTag
     group 'com.kambr'
 }
 
