Change Main class name to GeniusSyncParser

--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'com.kambr.sync.Main'
+    mainClassName = 'com.kambr.sync.GeniusSyncParser'
 }
 
 test {
