--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -39,6 +39,7 @@ stages:
 
           - task: Gradle@2
             inputs:
+              workingDirectory: ''
               gradleWrapperFile: 'gradlew'
               gradleOptions: '-Xmx3072m'
               javaHomeOption: 'JDKVersion'
