--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -12,7 +12,7 @@ pr:
       - '*'
 
 variables:
-  GRADLE_USER_HOME: $(Pipelins.Workspace)/.gradle
+  GRADLE_USER_HOME: $(Pipelines.Workspace)/.gradle
 
 pool:
   vmImage: 'ubuntu-latest'
