--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'com.palantir.git-version' version '0.11.0'
     id 'maven-publish'
     id 'antlr'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.20-RC'
 }
 
 configurations {
@@ -64,6 +65,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
 
 }
@@ -76,4 +78,14 @@ application {
 test {
     // Use junit platform for unit tests
     useJUnitPlatform()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
