--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,8 @@ repositories {
 
 dependencies {
 
-    implementation 'org.antlr:antlr4:4.8-1'
-    implementation 'org.antlr:antlr4-runtime:4.8-1'
+    implementation group: 'org.antlr', name: 'antlr4', version: '4.9.1'
+    implementation 'org.antlr:antlr4-runtime:4.9-1'
     implementation 'com.google.guava:guava:28.1-jre'
     implementation 'com.kambr:kambr-logger:0.7.3'
 
