--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'com.kambr.parser.onex.sync.GeniusSyncParser'
+    mainClass.set('com.kambr.parser.onex.sync.GeniusSyncParser')
 }
 
 test {
@@ -86,7 +86,6 @@ compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-    kotlinOptions.useIR = true
 }
 compileTestKotlin {
     kotlinOptions {
