--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
-    id 'java'
-    id 'application' // Apply the application plugin to add support for building a CLI application.
-    id 'net.linguica.maven-settings' version '0.5'
-    id 'com.palantir.git-version' version '0.11.0'
-    id 'maven-publish'
-    id 'antlr'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.31'
+    id "java"
+    id "application" // Apply the application plugin to add support for building a CLI application.
+    id "net.linguica.maven-settings" version "0.5"
+    id "com.palantir.git-version" version "0.11.0"
+    id "maven-publish"
+    id "antlr"
+    id "org.jetbrains.kotlin.jvm" version "1.4.31"
 }
 
 configurations {
     version versionDetails().lastTag
-    group 'com.kambr'
+    group "com.kambr"
 }
 
 java {
@@ -23,7 +23,7 @@ java {
 publishing {
     publications {
         myPublication(MavenPublication) {
-            artifactId = 'parser'
+            artifactId = "parser"
 
             from components.java
         }
@@ -58,10 +58,10 @@ dependencies {
     def versionJunitPlatform = "1.7.0"
 
 
-    implementation group: 'org.antlr', name: 'antlr4', version: '4.9.1'
-    implementation 'org.antlr:antlr4-runtime:4.9-1'
-    implementation 'com.google.guava:guava:28.1-jre'
-    implementation 'com.kambr:kambr-logger:0.7.3'
+    implementation ("org.antlr:antlr4:4.9.1")
+    implementation ("org.antlr:antlr4-runtime:4.9-1")
+    implementation ("com.google.guava:guava:28.1-jre")
+    implementation ("com.kambr:kambr-logger:0.7.3")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
@@ -75,7 +75,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass.set('com.kambr.parser.onex.sync.GeniusSyncParser')
+    mainClass.set("com.kambr.parser.onex.sync.GeniusSyncParser")
 }
 
 test {
